--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
