--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -17,7 +17,8 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
